fixed gap between icons in navbar-bottom, made font color of song name and singer more visible

--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -38,6 +38,7 @@
 a {
     color: #5775e3;
     text-decoration: none;
+    padding: 4px 14px 0px 14px;
 }
 
 .navbar-bottom{
@@ -51,7 +52,7 @@ a {
     bottom: 0;
     height: 60px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     gap: 48px;
     border-top: 1px solid gray;
